# toxic-repository

./: CMakeLists.txt  Main.c  README.md  Task1.c  Task1.h  map.c
Tests/: ASSERTS.c  ASSERTS.h  Task1Test.c  Task1Test.h  mapTest.c  mapTest.h
src/: Main.c  Task1.c  Task1.h  main.c  map.h
